--- a/app.json
+++ b/app.json
@@ -3,6 +3,7 @@
   "id": "com.ubnt.unifiaccess",
   "version": "1.0.0",
   "compatibility": ">=12.4.0",
+  "brandColor": "#159EDA",
   "sdk": 3,
   "platforms": [
     "local"
