--- a/.homeycompose/app.json
+++ b/.homeycompose/app.json
@@ -2,6 +2,7 @@
   "id": "com.ubnt.unifiaccess",
   "version": "1.0.0",
   "compatibility": ">=12.4.0",
+  "brandColor": "#159EDA",
   "sdk": 3,
   "platforms": [
     "local"
