--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
   "devDependencies": {
     "@types/homey": "npm:homey-apps-sdk-v3-types@^0.3.12",
     "eslint": "^7.32.0",
-    "eslint-config-athom": "^3.1.5"
+    "eslint-config-athom": "^3.1.5",
+    "homey": "^3.8.4"
+  },
+  "dependencies": {
+    "homey-log": "^2.1.0",
+    "ws": "^8.18.3"
   }
 }
