--- a/app.json
+++ b/app.json
@@ -71,7 +71,10 @@
         "en": "Access Hub"
       },
       "class": "lock",
-      "capabilities": [],
+      "capabilities": [
+        "alarm_contact",
+        "locked"
+      ],
       "platforms": [
         "local"
       ],
@@ -103,7 +106,13 @@
         "en": "Access Reader"
       },
       "class": "doorbell",
-      "capabilities": [],
+      "capabilities": [
+        "reader_nfc_enabled",
+        "reader_wave_enabled",
+        "reader_touch-pass_enabled",
+        "reader_mobile-tap_enabled",
+        "reader_mobile-button_enabled"
+      ],
       "platforms": [
         "local"
       ],
@@ -130,5 +139,57 @@
       ],
       "id": "access-reader"
     }
-  ]
+  ],
+  "capabilities": {
+    "reader_mobile-button_enabled": {
+      "type": "boolean",
+      "title": {
+        "en": "Mobile Buton",
+        "nl": "Mobiele Knop"
+      },
+      "getable": true,
+      "setable": true,
+      "uiComponent": "toggle"
+    },
+    "reader_mobile-tap_enabled": {
+      "type": "boolean",
+      "title": {
+        "en": "Mobile Tap",
+        "nl": "Mobiel Tik"
+      },
+      "getable": true,
+      "setable": true,
+      "uiComponent": "toggle"
+    },
+    "reader_nfc_enabled": {
+      "type": "boolean",
+      "title": {
+        "en": "NFC",
+        "nl": "NFC"
+      },
+      "getable": true,
+      "setable": true,
+      "uiComponent": "toggle"
+    },
+    "reader_touch-pass_enabled": {
+      "type": "boolean",
+      "title": {
+        "en": "Touch-pass",
+        "nl": "Touch-pass"
+      },
+      "getable": true,
+      "setable": true,
+      "uiComponent": "toggle"
+    },
+    "reader_wave_enabled": {
+      "type": "boolean",
+      "title": {
+        "en": "Wave",
+        "nl": "Handgebaar"
+      },
+      "getable": true,
+      "setable": true,
+      "uiComponent": "toggle"
+    }
+  }
 }
