adding more functionality like access options

--- a/app.json
+++ b/app.json
@@ -70,7 +70,7 @@
       "name": {
         "en": "Access Door"
       },
-      "class": "garagedoor",
+      "class": "lock",
       "capabilities": [
         "alarm_contact",
         "locked"
