--- a/.homeycompose/app.json
+++ b/.homeycompose/app.json
@@ -44,7 +44,7 @@
   "bugs": {
     "url": "https://github.com/steffjenl/com-homey-unifiaccess/issues"
   },
-  "support": "https://community.homey.app/t/app-pro-ubiquiti-unifi-protect/42966",
+  "support": "https://monkeysoft.nl/homey-integrations-support/",
   "homeyCommunityTopicId": 42966,
   "api": {
     "getStatus": {
